[tool.poetry]
name = "ptest"
version = "0.1.0"
description = ""
authors = ["marioyordanoff <mario@almalabs.studio>"]
license = "Apache"
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
openai = "^1.37.1"
numpy ="^1.26.4"
weaviate-client = "^4.7.1"
langchain = "^0.2.11"
langchain-groq = "^0.1.6"
datasets = "^2.20.0"
notebook = "^7.2.1"
python-dotenv = "^1.0.1"
dspy-ai = "^2.4.12"
chromadb = "^0.5.5"
pypdf = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
